--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     "declaration": true,
     "declarationMap": true
   },
-  "include": ["src"],
+  "include": ["src", "custom.d.ts"],
   "exclude": ["node_modules"]
 }
